# react-shadcn-flow

./: alembic.ini  main.py  pyproject.toml  pytest.ini
api/job/: __init__.py
application/: build_library_job.py  multi_price_job.py  night_batch_job.py
database/: config.py  database.py  postgres.py  sqlite.py
database/migrations/: README.md  env.py
database/migrations/versions/: 2025_11_17-b7cfe518b75c_init_tables.py
domain/: job_repository.py
domain/models/: __init__.py  job.py  task.py  task_dependency.py
domain/models/enums/: input_strategy.py  status.py  task_type.py
domain/models/mixins/: base.py  io.py  lifecycle.py  timestamp.py
domain/services/engine/: engine.py
domain/services/engine/reactive/: async_map.py  event.py  graph_builder.py  reactive_engine.py  reactive_job.py  reactive_task.py
shared/: utils.py
ui/: .cta.json  .env.example  README-API.md  package-lock.json  package.json  pnpm-lock.yaml
ui/src/: main.tsx  routeTree.gen.ts  styles.css
ui/src/components/: app-sidebar.tsx  base-handle.tsx  node-status-indicator.tsx  team-switcher.tsx
ui/src/components/ui/: context-menu.tsx
ui/src/features/draft/: README.md  index.ts
ui/src/features/draft/api/: client.ts  index.ts  queries.ts
ui/src/features/draft/components/: FlowGraph.tsx  RunCard.tsx  RunsList.tsx  index.ts  (+2 more)
ui/src/features/jobs/: job-flow.tsx  job-list.tsx
ui/src/lib/: query-client.ts
ui/src/lib/api/: client.ts  index.ts  query-factory.ts  types.ts
ui/src/lib/schemas/: index.ts
ui/src/routes/: __root.tsx  index.tsx  jobs.$jobId.tsx  jobs.index.tsx  jobs.tsx
(+13 files in other folders)
